client/src/App.css
/* ... */
.footer-section .relative {
  position: relative;
}

.footer-section a {
  text-decoration: none;
  color: #2f2f2f;
  -webkit-transition: .3s all ease;
  -o-transition: .3s all ease;
  transition: .3s all ease;
}

.footer-section a:hover {
  color: rgba(47, 47, 47, 0.5);
}

.footer-section .subscription-form {
  margin-bottom: 40px;
  position: relative;
  z-index: 2;
  margin-top: 100px;
}

@media (min-width: 992px) {
  .footer-section .subscription-form {
    margin-top: 0px;
    margin-bottom: 80px;
  }
}

.footer-section .subscription-form h3 {
  font-size: 18px;
  font-weight: 500;
  color: #3b5d50;
}

.footer-section .subscription-form .form-control {
  height: 50px;
  border-radius: 10px;
  font-family: "Inter", sans-serif;
}

.footer-section .subscription-form .form-control:active,
.footer-section .subscription-form .form-control:focus {
  outline: none;
  -webkit-box-shadow: none;
  box-shadow: none;
  border-color: #3b5d50;
  -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
  box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
}

.footer-section .subscription-form .form-control::-webkit-input-placeholder {
  font-size: 14px;
}

.footer-section .subscription-form .form-control::-moz-placeholder {
  font-size: 14px;
}

.footer-section .subscription-form .form-control:-ms-input-placeholder {
  font-size: 14px;
}

.footer-section .subscription-form .form-control:-moz-placeholder {
  font-size: 14px;
}

.footer-section .subscription-form .btn {
  border-radius: 10px !important;
}

.footer-section .sofa-img {
  position: absolute;
  top: -200px;
  z-index: 1;
  right: 0;
}

.footer-section .sofa-img img {
  max-width: 380px;
}

.footer-section .links-wrap {
  margin-top: 0px;
}

@media (min-width: 992px) {
  .footer-section .links-wrap {
    margin-top: 54px;
  }
}

.footer-section .links-wrap ul li {
  margin-bottom: 10px;
}

.footer-section .footer-logo-wrap .footer-logo {
  font-size: 32px;
  font-weight: 500;
  text-decoration: none;
  color: #3b5d50;
}

.footer-section .custom-social li {
  margin: 2px;
  display: inline-block;
}

.footer-section .custom-social li a {
  width: 40px;
  height: 40px;
  text-align: center;
  line-height: 40px;
  display: inline-block;
  background: #dce5e4;
  color: #3b5d50;
  border-radius: 50%;
}

.footer-section .custom-social li a:hover {
  background: #3b5d50;
  color: #ffffff;
}

.footer-section .border-top {
  border-color: #dce5e4;
}

.footer-section .border-top.copyright {
  font-size: 14px !important;
}

.hero {
  background: #3b5d50;
  padding: calc(4rem - 30px) 0 0rem 0;
}

@media (min-width: 768px) {
  .hero {
    padding: calc(4rem - 30px) 0 4rem 0;
  }
}

@media (min-width: 992px) {
  .hero {
    padding: calc(8rem - 30px) 0 8rem 0;
  }
}

.hero .intro-excerpt {
  position: relative;
  z-index: 4;
}

@media (min-width: 992px) {
  .hero .intro-excerpt {
    max-width: 450px;
  }
}

.hero h1 {
  font-weight: 700;
  color: #ffffff;
  margin-bottom: 30px;
}

@media (min-width: 1400px) {
  .hero h1 {
    font-size: 54px;
  }
}

.hero p {
  color: rgba(255, 255, 255, 0.5);
  margin-bottom: 30px;
}

.hero .hero-img-wrap {
  position:relative ;
}

.hero .hero-img-wrap img {
  position: relative;
  top: 0px;
  right: 0px;
  z-index: 2;
  max-width: 700px;
 
}

@media (min-width: 768px) {
  .hero .hero-img-wrap img {
    right: 0px;
    left: -100px;
  }
}

@media (min-width: 992px) {
  .hero .hero-img-wrap img {
    left: 0px;
    top: -80px;
    position: absolute;
    right: -50px;
  }
}

@media (min-width: 1200px) {
  .hero .hero-img-wrap img {
    left: 0px;
    top: -80px;
    right: -100px;
  }
}

.hero .hero-img-wrap:after {
  content: "";
  position: absolute;
  width: 255px;
  height: 217px;
  background-image: url("../public/images/couch.png");
  background-size: contain;
  background-repeat: no-repeat;
  right: -100px;
  top: -0px;
}

@media (min-width: 1200px) {
  .hero .hero-img-wrap:after {
    top: -40px;
  }
}

.btn {
  font-weight: 600;
  padding: 12px 30px;
  border-radius: 30px;
  color: #ffffff;
  background: #2f2f2f;
  border-color: #2f2f2f;
}

.btn:hover {
  color: #ffffff;
  background: #222222;
  border-color: #222222;
}

.btn:active,
.btn:focus {
  outline: none !important;
  -webkit-box-shadow: none;
  box-shadow: none;
}

.btn.btn-primary {
  background: #3b5d50;
  border-color: #3b5d50;
}

.btn.btn-primary:hover {
  background: #314d43;
  border-color: #314d43;
}

.btn.btn-secondary {
  color: #2f2f2f;
  background: #f9bf29;
  border-color: #f9bf29;
}

.btn.btn-secondary:hover {
  background: #f8b810;
  border-color: #f8b810;
}

.btn.btn-white-outline {
  background: transparent;
  border-width: 2px;
  border-color: rgba(255, 255, 255, 0.3);
}

.btn.btn-white-outline:hover {
  border-color: white;
  color: #ffffff;
}

.section-title {
  color: #2f2f2f;
}

.product-section {
  padding: 7rem 0;
}

.product-section .product-item {
  text-align: center;
  text-decoration: none;
  display: block;
  position: relative;
  padding-bottom: 50px;
  cursor: pointer;
}

.product-section .product-item .product-thumbnail {
  margin-bottom: 30px;
  position: relative;
  top: 0;
  -webkit-transition: .3s all ease;
  -o-transition: .3s all ease;
  transition: .3s all ease;
}

.product-section .product-item h3 {
  font-weight: 600;
  font-size: 16px;
}

.product-section .product-item strong {
  font-weight: 800 !important;
  font-size: 18px !important;
}

.product-section .product-item h3,
.product-section .product-item strong {
  color: #2f2f2f;
  text-decoration: none;
}

.product-section .product-item .icon-cross {
  position: absolute;
  width: 35px;
  height: 35px;
  display: inline-block;
  background: #2f2f2f;
  bottom: 15px;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  margin-bottom: -17.5px;
  border-radius: 50%;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: .3s all ease;
  -o-transition: .3s all ease;
  transition: .3s all ease;
}
/* ... */

